--- a/index.html
+++ b/index.html
@@ -42,31 +42,31 @@ Daniel Czerczon
   <fieldset size="1">
  <legend color="Orange">
     <h1 align="right"> zart o informatyku </h1>
-    Dzieci piszą wypracowanie o tym, jak wyobrażają sobie pracę informatyka.<br>
+    Dzieci pisza wypracowanie o tym, jak wyobrażaja sobie prace informatyka.<br>
 Nie pisze tylko Karol.<br>
 - Dlaczego nie piszesz? - pyta go nauczycielka.<br>
-- Czekam, aż mi się otworzy edytor tekstu.
+- Czekam, az mi sie otworzy edytor tekstu.
  </legend>
  </fieldset>
  <fieldset size="1">
     <legend>
      <h1 align="center"> Zart o policjancie</h1>
-     Inspekcja w więzieniu: <br>
-- W tej celi siedzi nasz najzdolniejszy więzień - mówi naczelnik więzienia do przewodniczącego inspekcji. <br>
+     Inspekcja w wiezieniu: <br>
+- W tej celi siedzi nasz najzdolniejszy wiezien - mowi naczelnik wiezienia do przewodniczacego inspekcji. <br>
 - Dlaczego najzdolniejszy? <br>
-- Bo kiedy odsiadywał u nas swój pierwszy wyrok nie umiał czytać i pisać. Nauczyliśmy go, a teraz siedzi za fałszowanie dokumentów.
+- Bo kiedy odsiadywal u nas swoj pierwszy wyrok nie umial czytac i pisac. Nauczylismy go, a teraz siedzi za falszowanie dokumentow.
     </legend>
     </fieldset>
      <fieldset size="1">
   <legend>
       <h1 align="left"> Zart o dziadku</h1>
-      Dziadek dał Jasiowi 20 zł na urodziny. <br>
-Mama obserwuje Jasia, wreszcie mówi: <br>
-- Jasiu, podziękuj dziadziusiowi. <br>
+      Dziadek dal Jasiowi 20 zl na urodziny. <br>
+Mama obserwuje Jasia, wreszcie mowi: <br>
+- Jasiu, podziekuj dziadziusiowi. <br>
 - Ale jak? <br>
-- Powiedz tak, jak ja mówię, gdy tatuś daje mi pieniążki. <br>
-Jasiu zwraca się do dziadzia: <br>
-- Czemu tak mało?
+- Powiedz tak, jak ja mowie, gdy tatus daje mi pieniazki. <br>
+Jasiu zwraca sie do dziadzia: <br>
+- Czemu tak malo?
  </legend>
  </fieldset>
 
