--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ Daniel Czerczon
 Nie pisze tylko Karol.<br>
 - Dlaczego nie piszesz? - pyta go nauczycielka.<br>
 - Czekam, aż mi się otworzy edytor tekstu.
+  <hr color="blue" style="width:100%;margin-left:0">
  </legend>
  </fieldset>
  <fieldset size="1">
