--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Daniel Czerczon
 
 <fieldset size="1">
  <legend color="Orange">
-    <h1 align="right"> zart o informatyku </h1> <IMG SRC="giph.gif" ALIGN=left BORDER=18 WIDTH=108 HEIGHT=108 ALT=„Grafika”> Informatyk <br>
+    <h1 align="right"> zart o informatyku </h1> <IMG SRC="giph.gif" ALIGN=left BORDER=18 WIDTH=108 HEIGHT=108 ALT=„grafika-Daniel”> Informatyk <br>
     Dzieci piszą wypracowanie o tym, jak wyobrażają sobie pracę informatyka.<br>
 Nie pisze tylko Karol.<br>
 - Dlaczego nie piszesz? - pyta go nauczycielka.<br>
