--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@ Daniel Czerczon
 
 <fieldset size="1">
  <legend color="Orange">
-    <h1 align="right"> zart o informatyku </h1> <IMG SRC="giph.gif" ALIGN=left BORDER=18 WIDTH=108 HEIGHT=108 ALT=„grafika-Czerczon”> Informatyk <br>
+    <h1 align="right"> zart o informatyku </h1>
+  <IMG SRC="giph.gif" ALIGN=left BORDER=18 WIDTH=108 HEIGHT=108 ALT=„grafika-Czerczon”> Informatyk <br>
     Dzieci piszą wypracowanie o tym, jak wyobrażają sobie pracę informatyka.<br>
 Nie pisze tylko Karol.<br>
 - Dlaczego nie piszesz? - pyta go nauczycielka.<br>
@@ -63,6 +64,7 @@ Nie pisze tylko Karol.<br>
  <fieldset size="1">
     <legend>
      <h1 align="center"> Zart o policjancie</h1>
+     <IMG SRC="giphy1996.gif" ALIGN=left BORDER=18 WIDTH=108 HEIGHT=108 ALT=„grafika-Czerczon”> Policjant <br>
      Inspekcja w więzieniu: <br>
 - W tej celi siedzi nasz najzdolniejszy więzień - mówi naczelnik więzienia do przewodniczącego inspekcji. <br>
 - Dlaczego najzdolniejszy? <br>
