--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Nie pisze tylko Karol.<br>
  <fieldset size="1">
     <legend>
      <h1 align="center"> Zart o policjancie</h1>
-     <IMG SRC="giphy1996.gif" ALIGN=left BORDER=18 WIDTH=108 HEIGHT=108 ALT=„grafika-Czerczon”> Policjant <br>
+     <IMG SRC="giphy1996.gif" ALIGN=left BORDER=18 WIDTH=108 HEIGHT=108 ALT=„grafika2-Czerczon”> Policjant <br>
      Inspekcja w więzieniu: <br>
 - W tej celi siedzi nasz najzdolniejszy więzień - mówi naczelnik więzienia do przewodniczącego inspekcji. <br>
 - Dlaczego najzdolniejszy? <br>
