--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ Nie pisze tylko Karol.<br>
      <fieldset size="1">
   <legend>
       <h1 align="left"> Zart o dziadku</h1>
+    <IMG SRC="giphy5.gif" ALIGN=right BORDER=18 WIDTH=108 HEIGHT=108 ALT=„grafika4-Czerczon”> Dziadek <br>
+    <IMG SRC="giphy4.gif" ALIGN=left BORDER=18 WIDTH=108 HEIGHT=108 ALT=„grafika5-Czerczon”> Disco-Dziadek <br>
       Dziadek dał Jasiowi 20 zł na urodziny. <br>
 Mama obserwuje Jasia, wreszcie mówi: <br>
 - Jasiu, podziękuj dziadziusiowi. <br>
