--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
    Walidator W3C, czyli W3C Markup Validation Service, to podstawowe narzędzie, które pomoże nam tworzyć poprawne konstrukcyjnie strony.
    Walidator jest internetową bramą do znanego parsera SGML o nazwie SP. 
    SP pobiera nasz kod i porównuje go z obiektowymi regułami składni nazwanymi DTD.
+  
+  <a href="poczta_.html"> link do poczty </a><br>
+		<a href="plik_dylevich.html"> link do plika </a><br>
+		<a href="#srodek">kliknij aby skoczyć na środek tekstu</a><br>
+		<a href="#koniec">kliknij aby skoczyć na koniec tekstu</a><br>
+		<a href="tabela_dylevich.html"> link do tabeli </a><br>
+		<a href="formularz_dylevich.html"> link do formularza </a><br>
    
   </head>
 <body>
