--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="utf-8">
    <title> Daniel Czerczon 1P </title>  
    <p><b>Adres: 81-189 </b><i> Gdansk Dabrowszczakow </i><strike> Ul. Mickiewicza </strike><u> 102/35 </u></p><br>
-   
+    <body bgcolor="LightGrey">
    Walidator W3C, czyli W3C Markup Validation Service, to podstawowe narzędzie, które pomoże nam tworzyć poprawne konstrukcyjnie strony.
    Walidator jest internetową bramą do znanego parsera SGML o nazwie SP. 
    SP pobiera nasz kod i porównuje go z obiektowymi regułami składni nazwanymi DTD.
   
-  <a href="poczta_.html"> link do poczty </a><br>
-		<a href="plik_dylevich.html"> link do plika </a><br>
+                <a href="poczta_czerczon.html"> link do poczty </a><br>
+		<a href="plik_czerczon.html"> link do plika </a><br>
 		<a href="#srodek">kliknij aby skoczyć na środek tekstu</a><br>
 		<a href="#koniec">kliknij aby skoczyć na koniec tekstu</a><br>
-		<a href="tabela_dylevich.html"> link do tabeli </a><br>
-		<a href="formularz_dylevich.html"> link do formularza </a><br>
+		<a href="tabela_czerczon.html"> link do tabeli </a><br>
+		<a href="formularz_czerczon.html"> link do formularza </a><br>
    
   </head>
 <body>
@@ -93,7 +93,6 @@ Jasiu zwraca się do dziadzia: <br>
 - Czemu tak mało?
  </legend>
  </fieldset>
-
      <br><br><br>
      <h1> poniżej są trzy wyliczenia z różnymi znakami wyliczenia</h1>
      <h1> Ty zaproponuj swoje, związane z informatyką</h1>
@@ -139,5 +138,15 @@ Jasiu zwraca się do dziadzia: <br>
                                  <LI> ALT F4 - zamknij komputer 
                            </UL>
            </UL>
+					 
+		<A NAME="lewo"></A>
+		
+		<a href="poczta_czerczon.html"> link do poczty </a><br>
+		<a href="plik_czerczon.html"> link do plika </a><br>
+		<a href="#poczatek">kliknij aby skoczyć na początek tekstu</a><br>
+		<a href="#koniec">kliknij aby skoczyć na koniec tekstu</a><br>
+		<a href="tabela_czerczon.html"> link do tabeli </a><br>
+		<a href="formularz_czerczon.html"> link do formularza </a>
+		<A NAME="koniec"></A>
         
 </html>
