--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<a href="#koniec">kliknij aby skoczyć na koniec tekstu</a><br>
 		<a href="tabela_czerczon.html"> link do tabeli </a><br>
 		<a href="formularz_czerczon.html"> link do formularza </a><br>
-   
+                      <A NAME="poczatek"></A>
   </head>
 <body>
 Daniel Czerczon 
@@ -97,6 +97,14 @@ Jasiu zwraca się do dziadzia: <br>
      <h1> poniżej są trzy wyliczenia z różnymi znakami wyliczenia</h1>
      <h1> Ty zaproponuj swoje, związane z informatyką</h1>
  
+	  <A NAME="srodek"></A>
+		
+		<a href="poczta_dylevich.html"> link do poczty </a><br>
+		<a href="plik_dylevich.html"> link do plika </a><br>
+		<a href="#poczatek">kliknij aby skoczyć na początek tekstu</a><br>
+		<a href="#koniec">kliknij aby skoczyć na koniec tekstu</a><br>
+		<a href="tabela_dylevich.html"> link do tabeli </a><br>
+		<a href="formularz_dylevich.html"> link do formularza </a><br>
 
  <UL TYPE=circle>
       <li><b> Programowania robimy bez końca</b>
