--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 
     <meta charset="utf-8">
    <title> Daniel Czerczon 1P </title>  
-   <p><b>Adres: 81-189 </b><i> Gdansk Dabrowszczakow </i><strike> Ul. Mickiewicza </strike><u> 102/35 </u></p><br>
-   Walidator W3C, czyli W3C Markup Validation Service, to podstawowe narzędzie, które pomoże nam tworzyć poprawne konstrukcyjnie strony.
-   Walidator jest internetową bramą do znanego parsera SGML o nazwie SP. 
-   SP pobiera nasz kod i porównuje go z obiektowymi regułami składni nazwanymi DTD.
+   
+	 <br><Br><br>
+<p>Walidacja   Walidator W3C, czyli W3C Markup Validation Service, to podstawowe narzędzie, które pomoże nam tworzyć poprawne konstrukcyjnie strony.
+   Walidator jest internetową bramą do znanego parsera SGML o nazwie SP.  <br>
+		program sprawdzający poprawność dokumentu o określonej składni.<p><br>
+		<a href="https://validator.w3.org/">link do validatora</a><br><p><b>Adres: 81-189 </b><i> Gdansk Dabrowszczakow </i><strike> Ul. Mickiewicza </strike><u> 102/35 </u></p><br>
+ 
    <A NAME="poczatek"></A>
 	 <body bgcolor="LightGrey">        
-	 <a href="poczta_czerczon.html"> link do poczty </a><br>
+	        <a href="poczta_czerczon.html"> link do poczty </a><br>
 		<a href="plik_czerczon.html"> link do plika </a><br>
 		<a href="#srodek">kliknij aby skoczyć na środek tekstu</a><br>
 		<a href="#koniec">kliknij aby skoczyć na koniec tekstu</a><br>
@@ -126,7 +129,7 @@ Jasiu zwraca się do dziadzia: <br>
        <br><br><br>
       <h3> poniżej będą trzy poziomy numerowania/wyliczenia z różnymi rodzajami numerowania/wyliczenia</h3>
        <h3> Ty zaproponuj swoje, związane z informatyką </h3>
-                
+              <OL TYPE=I START=1><h3> o wszystkim naraz</h3>  
                 <UL>
                        <LI>  Skróty znanych znaczków informatycznych               
                                 <UL> WWW - World Wide Web 
@@ -141,7 +144,7 @@ Jasiu zwraca się do dziadzia: <br>
                                  <LI> ALT F4 - zamknij komputer 
                            </UL>
            </UL>
-					 
+	</OL>				 
 		<A NAME="lewo"></A>
 		
 		<a href="poczta_czerczon.html"> link do poczty </a><br>
