--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <p>Walidacja   Walidator W3C, czyli W3C Markup Validation Service, to podstawowe narzędzie, które pomoże nam tworzyć poprawne konstrukcyjnie strony.
    Walidator jest internetową bramą do znanego parsera SGML o nazwie SP.  <br>
 		program sprawdzający poprawność dokumentu o określonej składni.<p><br>
-		<a href="https://validator.w3.org/">link do validatora</a><br><p><b>Adres: 81-189 </b><i> Gdansk Dabrowszczakow </i><strike> Ul. Mickiewicza </strike><u> 102/35 </u></p><br>
+		<a href="https://validator.w3.org/">link do validatora</a>
+	 <br><p><b>Adres: 81-189 </b><i> Gdansk Dabrowszczakow </i><strike> Ul. Mickiewicza </strike><u> 102/35 </strike></u></p><br>
  
-   <A NAME="poczatek"></A>
-	 <body bgcolor="LightGrey">        
+   <A id="poczatek"></A>        
 	        <a href="poczta_czerczon.html"> link do poczty </a><br>
 		<a href="plik_czerczon.html"> link do plika </a><br>
 		<a href="#srodek">kliknij aby skoczyć na środek tekstu</a><br>
@@ -21,7 +21,7 @@
 		<a href="formularz_czerczon.html"> link do formularza </a><br>
                       
   </head>
-<body>
+<body bgcolor="LightGrey">
 Daniel Czerczon 
 </body>
 <h1>x<sup>*</sup>x<sup>2</sup>x2</h1>
