--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
  <html lang="pl">
- <html>
 
     <meta charset="utf-8">
    <title> Daniel Czerczon 1P </title>  
@@ -10,7 +9,7 @@
    Walidator jest internetową bramą do znanego parsera SGML o nazwie SP.  <br>
 		program sprawdzający poprawność dokumentu o określonej składni.<p><br>
 		<a href="https://validator.w3.org/">link do validatora</a>
-	 <br><p><b>Adres: 81-189 </b><i> Gdansk Dabrowszczakow </i><strike> Ul. Mickiewicza </strike><u> 102/35 </strike></u></p><br>
+	 <br><p><b>Adres: 81-189 </b><i> Gdansk Dabrowszczakow </i><strike> Ul. Mickiewicza </strike><u> 102/35 </u></p><br>
  
    <A id="poczatek"></A>        
 	        <a href="poczta_czerczon.html"> link do poczty </a><br>
