--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
  <html lang="pl">
-
+<head>
     <meta charset="utf-8">
    <title> Daniel Czerczon 1P </title>  
    
-	 <br><Br><br>
+	 <br><br><br>
 <p>Walidacja   Walidator W3C, czyli W3C Markup Validation Service, to podstawowe narzędzie, które pomoże nam tworzyć poprawne konstrukcyjnie strony.
    Walidator jest internetową bramą do znanego parsera SGML o nazwie SP.  <br>
 		program sprawdzający poprawność dokumentu o określonej składni.<p><br>
