--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
  <html lang="pl">
 <head>
     <meta charset="utf-8">
-   <title> Daniel Czerczon 1P </title>  
+   <title> Daniel Czerczon 1P </title> 
+	</head>
    <body bgcolor="LightGrey">
 	 <br><br><br>
 <p>Walidacja   Walidator W3C, czyli W3C Markup Validation Service, to podstawowe narzędzie, które pomoże nam tworzyć poprawne konstrukcyjnie strony.
