--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@ Jasiu zwraca się do dziadzia: <br>
  
 	  <A NAME="srodek"></A>
 		
-		<a href="poczta_dylevich.html"> link do poczty </a><br>
-		<a href="plik_dylevich.html"> link do plika </a><br>
+		<a href="poczta_czerczon.html"> link do poczty </a><br>
+		<a href="plik_czerczon.html"> link do plika </a><br>
 		<a href="#poczatek">kliknij aby skoczyć na początek tekstu</a><br>
 		<a href="#koniec">kliknij aby skoczyć na koniec tekstu</a><br>
-		<a href="tabela_dylevich.html"> link do tabeli </a><br>
-		<a href="formularz_dylevich.html"> link do formularza </a><br>
+		<a href="tabela_czerczon.html"> link do tabeli </a><br>
+		<a href="formularz_czerczon.html"> link do formularza </a><br>
 
  <UL TYPE=circle>
       <li><b> Programowania robimy bez końca</b>
