--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Jasiu zwraca się do dziadzia: <br>
 		<a href="#poczatek">kliknij aby skoczyć na początek tekstu</a><br>
 		<a href="#koniec">kliknij aby skoczyć na koniec tekstu</a><br>
 		<a href="tabela_czerczon.html"> link do tabeli </a><br>
-		<a href="formularz_czerczon.html"> link do formularza </a><br>
+		<a href="formularz_czerczon.html"> link do formularza </a>
 
  <UL TYPE=circle>
       <li><b> Programowania robimy bez końca</b>
