--- a/plik_czerczon.html
+++ b/plik_czerczon.html
@@ -6,8 +6,7 @@
     <title> tabela Czerczon </title>
   </head>
   <body>
-    <a href="https://drive.google.com/file/d/1k-WA0D8cIqatehi6yrn7t3hWS9R7jJ4W/view?usp=sharing"><button style="width:100%"> Download </button></a>
+    <a href="https://www.youtube.com/watch?v=p7YXXieghto"><button style="width:100%"> Download </button></a>
     <A HREF="index.html"> wróć </A><br>
-    <p>validacja - 9/10</p>
   </body>
 </html>
