--- a/plik_czerczon.html
+++ b/plik_czerczon.html
@@ -6,7 +6,7 @@
     <title> tabela Czerczon </title>
   </head>
   <body>
-    <a href="https://www.youtube.com/watch?v=p7YXXieghto"><button style="width:100%"> Download </button></a>
+    <a href="INST_HTM_technik_2022.pdf"> Download </button></a>
     <A HREF="index.html"> wróć </A><br>
   </body>
 </html>
